--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 <main>
   <h1>GitHub Pages のサンプルです</h1>
+  <h1>GitHub Pages のサンプルです</h1>
+  <h1>GitHub Pages のサンプルです</h1>
   <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
 </main>
 
